# crate_assessment

./: .flake8  .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: tests.yml
crate_vbb_importer/: exceptions.py  manage.py  models.py
crate_vbb_importer/commands/: __init__.py  async_insert.py  clean.py  sync_insert.py
crate_vbb_importer/utils/: fields.py  logging.py
crate_vbb_importer/utils/commands/: __init__.py  base.py  manager.py
tests/: conftest.py  expected_data.py  test_commands.py  utils.py
tests/testdata/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
