[metadata]
name = crate_vbb_importer
version = 0.1.0
author = Andrey Kuchko
author_email = am.kuchko@gmail.com
description = Set of scripts for importing VBB data to CrateDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreyKuchko/crate_vbb_importer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    crate==0.26.0
    asyncpg==0.22.0

[options.entry_points]
console_scripts =
    crate_vbb_importer = crate_vbb_importer.manage:entry_point